<resources>
    <string name="app_name">Jadwal Pertandingan Bola</string>

    <string name="versus_label">vs</string>
    <string name="lineup_label">Susunan Pemain</string>
    <string name="statistic_label">Statisik</string>
    <string name="goal_label">Goal</string>
    <string name="shot_label">Tendangan</string>
    <string name="goalkeeper_label">Kiper</string>
    <string name="defense_label">Bertahan</string>
    <string name="midfield_label">Gelandang</string>
    <string name="forward_label">Penyerang</string>
    <string name="substitute_label">Cadangan</string>
    <string name="previous_match_label">Sebelumnya</string>
    <string name="next_match_label">Selanjutnya</string>
    <string name="favorite_match_label">Favorite</string>

    <string name="favorites">Favorites</string>

    <string name="added_to_favorite">Jadwal pertandingan dijadikan favorit</string>
    <string name="remove_from_favorite">Jadwal pertandingan bukan lagi favorit</string>


    <!-- CONTENT DESCRIPTION -->
    <string name="home_team_cd">Tim Tuan Rumah</string>
    <string name="away_team_cd">Tim Tamu</string>

    <!-- DUMMY CONTENT -->
    <string name="date">Sen, 20 Maret 1994</string>
    <string name="home_team">Arsenal</string>
    <string name="home_score">2</string>
    <string name="away_team">Liverpool</string>
    <string name="away_score">1</string>
    <string name="formation_strategy">4–3–3</string>
    <string name="shots">5</string>
    <string name="goals">6</string>
    <string name="single_player">Iker Casillas</string>
    <string name="many_player">Luis Figo, Cesar Sanchez, Hugo Cavez, Timbukttu, Anthony Christie</string>

    <!-- INTENT PARAM -->
    <string name="id_league_intent_param">id_league</string>
    <string name="name_league_intent_param">name_league</string>
    <string name="id_match_intent_param">id_match</string>
    <string name="is_favorite_intent_param">is_match_favorite</string>
    <string name="match_type_intent_param">schedule_type</string>
    <string name="match_type_prev_match_intent_param">previous</string>
    <string name="match_type_next_match_intent_param">next</string>
</resources>
