<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/match_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/versus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/versus_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_date_tv" />

    <TextView
        android:id="@+id/match_home_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/versus_label"
        app:layout_constraintEnd_toStartOf="@+id/versus_label"
        app:layout_constraintTop_toTopOf="@+id/versus_label"
        tools:text="@string/home_score"
        tools:textColor="@color/greenWinTeamColor" />

    <TextView
        android:id="@+id/match_away_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/versus_label"
        app:layout_constraintStart_toEndOf="@+id/versus_label"
        app:layout_constraintTop_toTopOf="@+id/versus_label"
        tools:text="@string/away_score"
        tools:textColor="@color/redLoseTeamColor" />

    <TextView
        android:id="@+id/match_home_team_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/match_home_score_tv"
        app:layout_constraintEnd_toStartOf="@+id/match_home_score_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/match_home_score_tv"
        tools:text="@string/home_team" />

    <TextView
        android:id="@+id/match_away_team_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/match_away_score_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/match_away_score_tv"
        app:layout_constraintTop_toTopOf="@+id/match_away_score_tv"
        tools:text="@string/away_team" />
</android.support.constraint.ConstraintLayout>